# Licensed under the Apache-2.0 license

[package]
name = "emulator-periph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield.workspace = true
caliptra-emu-bus.workspace = true
caliptra-emu-cpu.workspace = true
caliptra-emu-types.workspace = true
caliptra-emu-derive.workspace = true
caliptra-image-types.workspace = true
caliptra-emu-periph.workspace = true
caliptra-registers.workspace = true
emulator-consts.workspace = true
emulator-registers-generated.workspace = true
lazy_static.workspace = true
mcu-config.workspace = true
mcu-testing-common.workspace = true
num_enum.workspace = true
otp-digest.workspace = true
otp-lifecycle.workspace = true
registers-generated.workspace = true
semver.workspace = true
serde_json.workspace = true
serde.workspace = true
tock-registers.workspace = true
zerocopy.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
