# Licensed under the Apache-2.0 license

[package]
name = "caliptra-mcu-network-drivers"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
caliptra-mcu-network-config.workspace = true
caliptra-mcu-network-hil.workspace = true
caliptra-mcu-registers-generated.workspace = true
caliptra-mcu-romtime.workspace = true
tock-registers.workspace = true

[features]
default = []
