# Licensed under the Apache-2.0 license

[package]
name = "network-rom"
version.workspace = true
authors.workspace = true
edition.workspace = true

[build-dependencies]
network-config.workspace = true

[dependencies]
network-app-rom-test = { workspace = true, optional = true }
network-drivers.workspace = true

[features]
default = []
test-network-rom-dhcp-discover = ["network-app-rom-test"]
