# Licensed under the Apache-2.0 license

[package]
name = "ocptoken"
version = "0.1.0"
edition = "2021"
authors = ["Caliptra Contributors"]

[features]
default = ["openssl"]
openssl = ["dep:openssl"]

[dependencies]
coset.workspace = true
hex.workspace = true
thiserror.workspace = true
clap.workspace = true
openssl = { workspace = true, optional = true }

[dev-dependencies]
openssl.workspace = true
