# Licensed under the Apache-2.0 license

[package]
name = "caliptra-mcu-registers-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
caliptra-mcu-registers-systemrdl.workspace = true
