# Licensed under the Apache-2.0 license

[package]
name = "bare-metal-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
caliptra-drivers.workspace = true
caliptra-mcu-romtime.workspace = true

[target.'cfg(target_arch = "riscv32")'.dependencies]
rv32i.workspace = true
